# FastAPI_SQLAlchemy_Practice

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: a920116db5b4_create_users_and_projects_tables.py
src/apps/auth/: dependencies.py  middleware.py  routers.py  services.py
src/apps/project/: models.py  repository.py  routers.py  schemas.py  services.py
src/apps/user/: models.py  repository.py  routers.py  services.py
src/db/: session.py
src/routers/: api_v1_router.py
src/settings/: settings.py
tests/: conftest.py  test_app.py  test_external_posts_service.py  test_project_repository.py  test_project_service.py  test_user_repository.py
